sonarfixes (#5893)